# orjsonl

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/orjsonl/: __init__.py  orjsonl.py
tests/: helpers.py  test_orjsonl.jsonl  test_orjsonl.py
