[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orjsonl"
version = "1.0.0"
authors = [
  {name="Umar Butler", email="umar@umar.au"},
]
description = "A lightweight, high-performance Python library for parsing jsonl files."
readme = "README.md"
requires-python = ">=3.7"
license = {text="MIT"}
keywords = [
    "json",
    "jsonl",
    "jsonlines",
    "orjson",
    "lines",
    "json lines",
    "fast",
    "ndjson",
    "gzip",
    "bzip2",
    "xz",
    "zstandard",
    "xopen"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "orjson>=3.7.7",
    "xopen>=1.7.0"
]

[project.urls]
Homepage = "https://github.com/umarbutler/orjsonl"
Documentation = "https://github.com/umarbutler/orjsonl/blob/main/README.md"
Issues = "https://github.com/umarbutler/orjsonl/issues"
Source = "https://github.com/umarbutler/orjsonl"
